# Robotic_arm_simulaion_ROS_MoveIt_Gazebo

./: .rosinstall  .rosinstall.bak  README.md
mrcp_trex_gripper/mrcp_terx_gripper_description/: CMakeLists.txt  package.xml
mrcp_trex_gripper/mrcp_trex_gripper_description/: CMakeLists.txt  package.xml
mrcp_trex_gripper/mrcp_trex_gripper_gazebo/: CMakeLists.txt  package.xml
trex/trex_control/: CMakeLists.txt  package.xml
trex/trex_gazebo/: CMakeLists.txt  package.xml
trex/trex_gazebo/config/: trex_gazebo_control.yaml
trex/trex_gazebo/launch/: trex_gazebo_world.launch
trex/trex_moveit_config/: .setup_assistant
trex/urdf_trex/: CMakeLists.txt  package.xml
trex/urdf_trex/config/: joint_names_urdf_trex.yaml
trex/urdf_trex/launch/: display.launch
trex/urdf_trex/urdf/: urdf_trex.csv  urdf_trex.gv  urdf_trex.urdf
trex_control/: CMakeLists.txt  package.xml
trex_control/config/: trex_control.yaml
trex_control/launch/: trex_control.launch
trex_gazebo/: CMakeLists.txt  package.xml
trex_gazebo/launch/: trex_gazebo_demo.launch  trex_gazebo_world.launch
trex_gripper/roverv1/: CMakeLists.txt  package.xml
trex_gripper/trex_gripper_control/: CMakeLists.txt  package.xml
trex_gripper/trex_gripper_gazebo/: CMakeLists.txt  package.xml
trex_gripper/trex_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
trex_gripper/trex_gripper_urdf/: CMakeLists.txt  package.xml
trex_moveit_config/: CMakeLists.txt  package.xml
trex_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  trex_controllers.yaml
trex_moveit_config/launch/: demo_gazebo.launch  move_group.launch  moveit_rviz.launch  (+5 more)
urdf_trex/: package.xml
(+87 files in other folders)
