<package>
  <name>urdf_trex</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for urdf_trex</p>
    <p>This package contains configuration data, 3D models and launch files
for urdf_trex robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rostest</build_depend>
 
  <run_depend>gazebo_ros</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
 
  <export>
      gazebo_model_path="${prefix}/urdf"
      <gazebo_ros 
          plugin_path="${prefix}/devel/lib" 
          ld_library_path="${prefix}/devel/lib"/>
  </export>
</package>